Fix design on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -134,8 +134,6 @@ h4{
 
 
 .wrapper {
-	padding-top: 100px;
-	padding-bottom: 100px;
     background: url("../img/seed.jpg") left center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -147,12 +145,26 @@ h4{
     z-index: 0;
 }
 
+@media (min-height: 600px) {
+	.wrapper {
+		padding-top: 100px;
+		padding-bottom: 100px;
+	}
+}
+
 
 .wrapper h1 {
 	font-size: 3.5em;
 	color: white;
 	font-weight: lighter;
 	margin-bottom: 25px;
+}
+
+
+@media (max-width: 350px) {
+	.wrapper h1 {
+		font-size: 3em;
+	}
 }
 
 .wrapper p.lead {
